WIP: Clean up RIBSupport
// FIXME: split this up

Change-Id: Ie7e7b4b457cccb383f7257442f3a6d70b8d03222
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>