@@ -11,7 +11,6 @@ import com.google.common.collect.ImmutableCollection;
 import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.opendaylight.bgp.concepts.RouteDistinguisherUtil;
@@ -24,12 +23,10 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.l3vp
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.l3vpn.mcast.rev180417.l3vpn.mcast.destination.L3vpnMcastDestination;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.l3vpn.mcast.rev180417.l3vpn.mcast.destination.L3vpnMcastDestinationBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.l3vpn.mcast.rev180417.l3vpn.mcast.routes.L3vpnMcastRoute;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.rib.rev180329.rib.Tables;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.rib.rev180329.rib.tables.Routes;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.types.rev200120.AddressFamily;
 import org.opendaylight.yangtools.binding.BindingObject;
 import org.opendaylight.yangtools.binding.ChildOf;
-import org.opendaylight.yangtools.binding.ChoiceIn;
 import org.opendaylight.yangtools.binding.DataObject;
 import org.opendaylight.yangtools.binding.data.codec.api.BindingNormalizedNodeSerializer;
 import org.opendaylight.yangtools.yang.common.QName;
@@ -37,7 +34,6 @@ import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.NodeIdentifier;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.NodeIdentifierWithPredicates;
 import org.opendaylight.yangtools.yang.data.api.schema.ContainerNode;
-import org.opendaylight.yangtools.yang.data.api.schema.DataContainerChild;
 import org.opendaylight.yangtools.yang.data.api.schema.DataContainerNode;
 import org.opendaylight.yangtools.yang.data.api.schema.MapEntryNode;
 import org.opendaylight.yangtools.yang.data.api.schema.UnkeyedListEntryNode;
@@ -51,7 +47,7 @@ import org.slf4j.LoggerFactory;
  * @author Claudio D. Gasparini
  */
 abstract class AbstractL3vpnMcastIpRIBSupport<
-        C extends Routes & DataObject & ChoiceIn<Tables>,
+        C extends Routes & DataObject,
         S extends ChildOf<? super C> & L3vpnMcastRoutes>
         extends AbstractRIBSupport<C, S, L3vpnMcastRoute> {
     private static final Logger LOG = LoggerFactory.getLogger(AbstractL3vpnMcastIpRIBSupport.class);
@@ -95,30 +91,30 @@ abstract class AbstractL3vpnMcastIpRIBSupport<
     protected abstract IpPrefix createPrefix(String prefix);
 
     @Override
-    protected final Collection<NodeIdentifierWithPredicates> processDestination(
-            final DOMDataTreeWriteTransaction tx,
-            final YangInstanceIdentifier routesPath,
-            final ContainerNode destination,
-            final ContainerNode attributes,
+    protected final List<NodeIdentifierWithPredicates> processDestination(final DOMDataTreeWriteTransaction tx,
+            final YangInstanceIdentifier routesPath, final ContainerNode destination, final ContainerNode attributes,
             final ApplyRoute function) {
-        if (destination != null) {
-            final DataContainerChild routes = destination.childByArg(nlriRoutesList);
-            if (routes != null) {
-                if (routes instanceof UnkeyedListNode) {
-                    final YangInstanceIdentifier base = routesYangInstanceIdentifier(routesPath);
-                    final Collection<UnkeyedListEntryNode> routesList = ((UnkeyedListNode) routes).body();
-                    final List<NodeIdentifierWithPredicates> keys = new ArrayList<>(routesList.size());
-                    for (final UnkeyedListEntryNode l3vpnDest : routesList) {
-                        final YangInstanceIdentifier.NodeIdentifierWithPredicates routeKey = createRouteKey(l3vpnDest);
-                        function.apply(tx, base, routeKey, l3vpnDest, attributes);
-                        keys.add(routeKey);
-                    }
-                    return keys;
-                }
-                LOG.warn("Routes {} are not a map", routes);
-            }
+        if (destination == null) {
+            return List.of();
         }
-        return Collections.emptyList();
+        final var routesNode = destination.childByArg(nlriRoutesList);
+        if (routesNode == null) {
+            return List.of();
+        }
+        if (!(routesNode instanceof UnkeyedListNode routes)) {
+            LOG.warn("Routes {} are not a map", routesNode);
+            return List.of();
+        }
+
+        final var base = routesYangInstanceIdentifier(routesPath);
+        final var routesList = routes.body();
+        final var keys = new ArrayList<NodeIdentifierWithPredicates>(routesList.size());
+        for (var l3vpnDest : routesList) {
+            final var routeKey = createRouteKey(l3vpnDest);
+            function.apply(tx, base, routeKey, l3vpnDest, attributes);
+            keys.add(routeKey);
+        }
+        return keys;
     }
 
     final List<L3vpnMcastDestination> extractRoutes(final Collection<MapEntryNode> routes) {
