@@ -10,21 +10,18 @@ package org.opendaylight.protocol.bgp.mvpn.impl;
 import com.google.common.collect.ImmutableCollection;
 import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import org.eclipse.jdt.annotation.NonNull;
 import org.opendaylight.mdsal.dom.api.DOMDataTreeWriteTransaction;
 import org.opendaylight.protocol.bgp.rib.spi.AbstractRIBSupport;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.mvpn.rev200120.McastVpnSubsequentAddressFamily;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.mvpn.rev200120.MvpnRoutes;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.mvpn.rev200120.mvpn.MvpnChoice;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.mvpn.rev200120.mvpn.routes.MvpnRoute;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.rib.rev180329.rib.Tables;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.rib.rev180329.rib.tables.Routes;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.types.rev200120.AddressFamily;
 import org.opendaylight.yangtools.binding.BindingObject;
 import org.opendaylight.yangtools.binding.ChildOf;
-import org.opendaylight.yangtools.binding.ChoiceIn;
 import org.opendaylight.yangtools.binding.DataObject;
 import org.opendaylight.yangtools.binding.data.codec.api.BindingNormalizedNodeSerializer;
 import org.opendaylight.yangtools.yang.common.QName;
@@ -32,7 +29,6 @@ import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.NodeIdentifier;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier.NodeIdentifierWithPredicates;
 import org.opendaylight.yangtools.yang.data.api.schema.ContainerNode;
-import org.opendaylight.yangtools.yang.data.api.schema.DataContainerChild;
 import org.opendaylight.yangtools.yang.data.api.schema.DataContainerNode;
 import org.opendaylight.yangtools.yang.data.api.schema.UnkeyedListEntryNode;
 import org.opendaylight.yangtools.yang.data.api.schema.UnkeyedListNode;
@@ -44,10 +40,11 @@ import org.slf4j.LoggerFactory;
  *
  * @author Claudio D. Gasparini
  */
-abstract class AbstractMvpnRIBSupport<C extends Routes & DataObject & ChoiceIn<Tables>,
-        S extends ChildOf<? super C> & MvpnRoutes> extends AbstractRIBSupport<C, S, MvpnRoute> {
+abstract class AbstractMvpnRIBSupport<C extends Routes & DataObject, S extends ChildOf<? super C> & MvpnRoutes>
+        extends AbstractRIBSupport<C, S, MvpnRoute> {
     private static final Logger LOG = LoggerFactory.getLogger(AbstractMvpnRIBSupport.class);
-    private final NodeIdentifier nlriRoutesList;
+
+    private final @NonNull NodeIdentifier nlriRoutesList;
     private final ImmutableCollection<Class<? extends BindingObject>> cacheableNlriObjects;
 
     /**
@@ -87,30 +84,33 @@ abstract class AbstractMvpnRIBSupport<C extends Routes & DataObject & ChoiceIn<T
     }
 
     @Override
-    protected final Collection<NodeIdentifierWithPredicates> processDestination(
+    protected final List<NodeIdentifierWithPredicates> processDestination(
             final DOMDataTreeWriteTransaction tx,
             final YangInstanceIdentifier routesPath,
             final ContainerNode destination,
             final ContainerNode attributes,
             final ApplyRoute function) {
-        if (destination != null) {
-            final DataContainerChild routes = destination.childByArg(nlriRoutesList);
-            if (routes != null) {
-                if (routes instanceof UnkeyedListNode) {
-                    final YangInstanceIdentifier base = routesYangInstanceIdentifier(routesPath);
-                    final Collection<UnkeyedListEntryNode> routesList = ((UnkeyedListNode) routes).body();
-                    final List<NodeIdentifierWithPredicates> keys = new ArrayList<>(routesList.size());
-                    for (final UnkeyedListEntryNode mvpnDest : routesList) {
-                        final NodeIdentifierWithPredicates routeKey = createRouteKey(mvpnDest);
-                        function.apply(tx, base, routeKey, mvpnDest, attributes);
-                        keys.add(routeKey);
-                    }
-                    return keys;
-                }
-                LOG.warn("Routes {} are not a map", routes);
-            }
+        if (destination == null) {
+            return List.of();
         }
-        return Collections.emptyList();
+        final var routesNode = destination.childByArg(nlriRoutesList);
+        if (routesNode == null) {
+            return List.of();
+        }
+        if (!(routesNode instanceof UnkeyedListNode routes)) {
+            LOG.warn("Routes {} are not a map", routesNode);
+            return List.of();
+        }
+
+        final var base = routesYangInstanceIdentifier(routesPath);
+        final var routesList = routes.body();
+        final var keys = new ArrayList<NodeIdentifierWithPredicates>(routesList.size());
+        for (var mvpnDest : routesList) {
+            final var routeKey = createRouteKey(mvpnDest);
+            function.apply(tx, base, routeKey, mvpnDest, attributes);
+            keys.add(routeKey);
+        }
+        return keys;
     }
 
     abstract NodeIdentifierWithPredicates createRouteKey(UnkeyedListEntryNode mvpn);
